print_tree_by_layer

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ a.out*
 core*
 .DS_Store
 *.o
+.vscode/ipch/f6e61fdf3e6fd58c/mmap_address.bin
+.vscode/c_cpp_properties.json
+.vscode/ipch/215946ea510657bd/mmap_address.bin
