--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ core*
 .vscode/ipch/f6e61fdf3e6fd58c/mmap_address.bin
 .vscode/c_cpp_properties.json
 .vscode/ipch/215946ea510657bd/mmap_address.bin
+.vscode/settings.json
+.vscode/ipch/d246d4a672617fa4/mmap_address.bin
